# dal-l

./: .gitignore  CLAUDE.md  README.md  dalil.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  vite.config.ts
.github/workflows/: release.yml
docs/: APP_USER_GUIDE.md  BUG_HUNT_2026-02-08.md  BUG_HUNT_FULL_2026-02-08.md  IMPLEMENTATION.md  OPTIMISATION_AUDIT.md  README.md  RELEASE_AND_DISTRIBUTION.md  TROUBLESHOOTING.md
docs/plans/: 2026-02-18-multi-project-support-design.md  2026-02-18-ux-ui-improvements-implementation-plan.md
scripts/: build-handbook.ts  release-macos.sh
scripts/lib/: build-navigation.ts  chunk-content.ts  config.ts  create-database.ts  extract-metadata.ts  parse-frontmatter.ts  remark-resolve-links.ts  render-markdown.ts  slug.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  projects.rs  settings.rs  user_state.rs
src/components/: ThemeToggle.vue  UpdateNotification.vue
src/composables/: useAI.ts  useBookmarks.ts  useCollections.ts  useCommandPalette.ts  useDocActivity.ts  useDocHistory.ts  useDocNotes.ts  useDocTabs.integration.test.ts  useDocTabs.ts  useFocusTrap.ts  useKeyboardNavigation.ts  useKeyboardShortcuts.ts  useKeydownDispatcher.ts  useLastVisited.ts  useNavigation.ts  useProjects.ts  useScrollMemory.ts  useSearch.ts  useSequentialNavigation.ts  useSettings.ts  useSidebar.ts  useTableOfContents.ts  useTags.ts  useTheme.ts  useToast.ts  useUpdater.ts
src/layouts/: AppLayout.vue
src/lib/: api.ts  bookmarkResolver.ts  bookmarkSort.test.ts  bookmarkSort.ts  deepLinks.test.ts  deepLinks.ts  featureFlags.ts  pendingDeepLink.ts  pendingDeepLinkBannerFlow.test.ts  pendingDeepLinkBannerFlow.ts  pendingDeepLinkResolution.test.ts  pendingDeepLinkResolution.ts  sanitise.ts  searchRanking.test.ts  searchRanking.ts  tabMenu.test.ts  tabMenu.ts  tabState.test.ts  tabState.ts  types.ts  (+2 more)
(+37 files in other folders)
