[package]
name = "dalil"
version = "0.1.0"
edition = "2021"
description = "Engineering handbook desktop app"

[lib]
name = "dalil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled", "vtab"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
